// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KissKissLoadingAnimation /> With custom props should match with snapshot 1`] = `
<div
  aria-hidden={true}
  className="sc-bczRLJ iuCeyK k-KissKissLoadingAnimation customClassName"
>
  <svg
    className="k-KissKissLoadingAnimation__svg"
    viewBox="0 0 21 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="k-KissKissLoadingAnimation__path k-KissKissLoadingAnimation__path-heart"
      d="M18.81 8a2.59 2.59 0 002.18-2.6c0-1.45-1.25-2.7-2.7-2.7-.73 0-1.35.31-1.87.73L11.85 8l4.47 4.47c.52.52 1.24.83 1.97.83 1.45 0 2.7-1.25 2.7-2.7.1-1.15-.83-2.4-2.18-2.6z"
      fill="red"
    />
    <path
      className="k-KissKissLoadingAnimation__path k-KissKissLoadingAnimation__path-circle"
      d="M13.82 2.5A7.91 7.91 0 008 0C3.53 0 0 3.53 0 8c0 4.47 3.53 8 8 8a8 8 0 005.71-2.39L8 8l5.82-5.5z"
      fill="red"
    />
  </svg>
</div>
`;

exports[`<KissKissLoadingAnimation /> With default props should match with snapshot 1`] = `
<div
  aria-hidden={true}
  className="sc-bczRLJ iuCeyK k-KissKissLoadingAnimation"
>
  <svg
    className="k-KissKissLoadingAnimation__svg"
    viewBox="0 0 21 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="k-KissKissLoadingAnimation__path k-KissKissLoadingAnimation__path-heart"
      d="M18.81 8a2.59 2.59 0 002.18-2.6c0-1.45-1.25-2.7-2.7-2.7-.73 0-1.35.31-1.87.73L11.85 8l4.47 4.47c.52.52 1.24.83 1.97.83 1.45 0 2.7-1.25 2.7-2.7.1-1.15-.83-2.4-2.18-2.6z"
      fill="var(--color-grey-900, #222)"
    />
    <path
      className="k-KissKissLoadingAnimation__path k-KissKissLoadingAnimation__path-circle"
      d="M13.82 2.5A7.91 7.91 0 008 0C3.53 0 0 3.53 0 8c0 4.47 3.53 8 8 8a8 8 0 005.71-2.39L8 8l5.82-5.5z"
      fill="var(--color-grey-900, #222)"
    />
  </svg>
</div>
`;
